# docs/swagger.yaml
@@ -2202,6 +2202,55 @@ paths:
       summary: 切换文章点赞状态
       tags:
       - 点赞
+  /posts/drafts:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.CreatePostRequest'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: 获取文章草稿
+      tags:
+      - 文章
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 草稿内容
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: 保存文章草稿
+      tags:
+      - 文章
   /posts/hot:
     get:
       parameters:
